import { UUID } from 'src/context/shared/domain/value-objects/uuid';

export class TrackingVisitorId extends UUID {}
