import { UpdatedAt } from 'src/context/shared/domain/value-objects/updated-at';

export class TrackingVisitorUpdatedAt extends UpdatedAt {}
