---
title: Tracking Context Class Diagram
date: 2025-04-27
---

%% Diagrama de clases del contexto tracking
classDiagram
    %% Entidad principal TrackingVisitor
    class TrackingVisitor {
        + id: TrackingVisitorId
        + name: TrackingVisitorName | null
        + currentUrl: TrackingVisitorCurrentURL | null
        + connectionDuration: TrackingVisitorConnectionDuration
        + ultimateConnectionDate: TrackingUltimateConnectionDate | null
        + isConnected: TrackingVisitorIsConnected
        + createdAt: TrackingVisitorCreatedAt
        + updatedAt: TrackingVisitorUpdatedAt
        + lastVisitedUrl: TrackingVisitorLastVisitedUrl | null
        + lastVisitedAt: TrackingVisitorLastVisitedAt | null
        + pageViews: TrackingVisitorPageViews
        + sessionDurationSeconds: TrackingVisitorSessionDurationSeconds
        + static fromPrimitives(params)
        + static create(id)
        + toPrimitives()
    }

    %% Value Objects
    class TrackingVisitorId
    class TrackingVisitorName
    class TrackingVisitorCurrentURL
    class TrackingVisitorConnectionDuration
    class TrackingUltimateConnectionDate
    class TrackingVisitorIsConnected
    class TrackingVisitorCreatedAt
    class TrackingVisitorUpdatedAt
    class TrackingVisitorLastVisitedUrl
    class TrackingVisitorLastVisitedAt
    class TrackingVisitorPageViews
    class TrackingVisitorSessionDurationSeconds

    %% Eventos
    class TrackingVisitorCreatedEvent {
        + trackingVisitorPrimitives: TrackingVisitorPrimitives
    }

    %% Primitives
    class TrackingVisitorPrimitives {
        + id: string
        + name: string | null
        + connectionDuration: number
        + ultimateConnectionDate: Date | null
        + isConnected: boolean
        + currentUrl: string | null
        + createdAt: Date
        + updatedAt: Date
        + lastVisitedUrl: string | null
        + lastVisitedAt: Date | null
        + pageViews: number
        + sessionDurationSeconds: number
    }

    %% Relaciones
    TrackingVisitor --> TrackingVisitorId
    TrackingVisitor --> TrackingVisitorName
    TrackingVisitor --> TrackingVisitorCurrentURL
    TrackingVisitor --> TrackingVisitorConnectionDuration
    TrackingVisitor --> TrackingUltimateConnectionDate
    TrackingVisitor --> TrackingVisitorIsConnected
    TrackingVisitor --> TrackingVisitorCreatedAt
    TrackingVisitor --> TrackingVisitorUpdatedAt
    TrackingVisitor --> TrackingVisitorLastVisitedUrl
    TrackingVisitor --> TrackingVisitorLastVisitedAt
    TrackingVisitor --> TrackingVisitorPageViews
    TrackingVisitor --> TrackingVisitorSessionDurationSeconds
    TrackingVisitor ..> TrackingVisitorCreatedEvent : <<aplica>>
    TrackingVisitorCreatedEvent --> TrackingVisitorPrimitives
